kotlin/programming-kotlin_code/lambdas/output/whycrossinline.output
whycrossinline.kts:13:26: error: can't inline 'action2' here: it may contain non-local returns. Add 'crossinline' modifier to parameter declaration 'action2'
  return { input: Int -> action2(input) }
                         ^
